--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buổi 3</title>
+    <title></title>
     <!-- Fontawesome -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
@@ -34,8 +34,8 @@
                                 <li>Self-Select Service</li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="">Tour</a></li>
-                        <li class="menu-item"><a href="">About Us</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Travel", "Tour")">Tour</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Aboutus", "Tour")">About Us</a></li>
                         <li class="menu-item"><a href="">Contact</a></li>
                         <li class="dropdown">
                             <a href="">Languages</a>
@@ -66,8 +66,8 @@
                         <input type="text" placeholder="">
 
                         <div class="form-links">
-                            <a href="#">Tạo tài khoản</a>
-                            <a href="#">Quên mật khẩu?</a>
+                            <a href="@Url.Action("Register", "Auth")">Tạo tài khoản</a>
+                            <a href="@Url.Action("Register", "Auth")">Quên mật khẩu?</a>
                         </div>
 
 
