--- a/Views/Tour/Home.cshtml
+++ b/Views/Tour/Home.cshtml
@@ -25,31 +25,33 @@
                 </div>
                 <div class="menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="">Home</a></li>
-                        <li class="dropdown">
-                            <a href="">Packages</a>
+                        <li class="menu-item"><a href="#">Home</a></li>
+
+                        <li class="menu-item dropdown">
+                            <a href="#">Packages</a>
                             <ul class="submenu">
-                                <li>Honeymoon Package</li>
-                                <li>Travel Package</li>
-                                <li>Self-Select Service</li>
+                                <li><a href="#">Honeymoon Package</a></li>
+                                <li><a href="#">Travel Package</a></li>
+                                <li><a href="#">Self-Select Service</a></li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="">Tour</a></li>
-                        <li class="menu-item"><a href="">About Us</a></li>
-                        <li class="menu-item"><a href="">Contact</a></li>
-                        <li class="dropdown">
-                            <a href="">Languages</a>
+
+                        <li class="menu-item"><a href="#">Tour</a></li>
+                        <li class="menu-item"><a href="#">About Us</a></li>
+                        <li class="menu-item"><a href="#">Contact</a></li>
+
+                        <li class="menu-item dropdown">
+                            <a href="#">Languages</a>
                             <ul class="submenu">
-                                <li>Tiếng Việt</li>
-                                <li>English</li>
+                                <li><a href="#">Tiếng Việt</a></li>
+                                <li><a href="#">English</a></li>
                             </ul>
                         </li>
                     </ul>
-
                 </div>
                 <div class="header-buttons">
                     <a href="#" class="contact-btn">Liên hệ <i class="fa-solid fa-phone"></i></a>
-                    <a href="#" class="login-btn">Đăng nhập <i class="fa-regular fa-circle-user"></i></a>
+                    <a href="@Url.Action("Login", "Auth")" class="login-btn">Đăng nhập <i class="fa-regular fa-circle-user"></i></a>
                 </div>
             </div>
             <div class="slider">
