--- a/Views/Information/Plan.cshtml
+++ b/Views/Information/Plan.cshtml
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="~/Content/assets/css/base.css" />
-    <link rel="stylesheet" href="~/Content/assets/css/stylePlan.css?v=2" />
+    <link rel="stylesheet" href="~/Content/assets/css/stylePlan.css?v=3" />
 </head>
 <body>
     <!-- Design -> Frontend -->
@@ -29,7 +29,7 @@
                 </div>
                 <div class="menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="">Home</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Home", "Tour")">Home</a></li>
                         <li class="dropdown">
                             <a href="">Packages</a>
                             <ul class="submenu">
@@ -38,8 +38,8 @@
                                 <li>Self-Select Service</li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="">Tour</a></li>
-                        <li class="menu-item"><a href="">About Us</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Travel", "Tour")">Tour</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Aboutus", "Tour")">About Us</a></li>
                         <li class="menu-item"><a href="">Contact</a></li>
                         <li class="dropdown">
                             <a href="">Languages</a>
@@ -67,22 +67,22 @@
     </div>
     <div class="box">
         <div class="otp-bar">
-            <div class="icon-detail">
+            <a href="@Url.Action("Detail", "Information")" class="icon-detail">
                 <i class="fa-solid fa-circle-info"></i>
                 <p>Thông Tin</p>
-            </div>
-            <div class="plan">
+            </a>
+            <a href="@Url.Action("Plan", "Information")" class="plan">
                 <i class="fa-solid fa-calendar"></i>
                 <p>Kế Hoạch Chuyến Đi</p>
-            </div>
-            <div class="icon-location">
+            </a>
+            <a href="@Url.Action("Location", "Information")" class="icon-location">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Địa Điểm</p>
-            </div>
-            <div class="img-lib">
+            </a>
+            <a href="@Url.Action("Gallery", "Information")" class="img-lib">
                 <i class="fa-solid fa-images"></i>
                 <p>Thư Viện</p>
-            </div>
+            </a>
         </div>
 
         <div class="detail">
