--- a/Views/Tour/Aboutus.cshtml
+++ b/Views/Tour/Aboutus.cshtml
@@ -28,7 +28,7 @@
                 </div>
                 <div class="menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="">Home</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Home", "Tour")">Home</a></li>
                         <li class="dropdown">
                             <a href="">Packages</a>
                             <ul class="submenu">
@@ -37,8 +37,8 @@
                                 <li>Self-Select Service</li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="">Tour</a></li>
-                        <li class="menu-item"><a href="">About Us</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Travel", "Tour")">Tour</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Aboutus", "Tour")">About Us</a></li>
                         <li class="menu-item"><a href="">Contact</a></li>
                         <li class="dropdown">
                             <a href="">Languages</a>
