--- a/Views/Tour/Travel.cshtml
+++ b/Views/Tour/Travel.cshtml
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="~/Content/assets/css/base.css" />
-    <link rel="stylesheet" href="~/Content/assets/css/styleTravel.css?v=4" />
+    <link rel="stylesheet" href="~/Content/assets/css/styleTravel.css?v=5" />
 </head>
 <body>
     <div class="container">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="menu">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="">Home</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Home", "Tour")">Home</a></li>
                         <li class="dropdown">
                             <a href="">Packages</a>
                             <ul class="submenu">
@@ -37,8 +37,8 @@
                                 <li>Self-Select Service</li>
                             </ul>
                         </li>
-                        <li class="menu-item"><a href="">Tour</a></li>
-                        <li class="menu-item"><a href="">About Us</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Travel", "Tour")">Tour</a></li>
+                        <li class="menu-item"><a href="@Url.Action("Aboutus", "Tour")">About Us</a></li>
                         <li class="menu-item"><a href="">Contact</a></li>
                         <li class="dropdown">
                             <a href="">Languages</a>
@@ -71,19 +71,19 @@
         </div>
         <div class="travel-wrapper">
             <div class="travel-section">
-                <div class="box-section">
-                    <img src="~/Content/assets/img-travel/Switzerland.png">
-                    <div class="taskbar">
-                        <div class="taskbar-item"><i class="fa-solid fa-calendar-days"></i>12, September 2025</div>
-                        <div class="taskbar-item"><i class="fa-solid fa-people-group"></i>120+ People</div>
-                    </div>
-                    <h2>Switzerland</h2>
-                    <p>Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias Et.</p>
-                    <div class="feedback">
-                        <span class="price">1,100$</span>
-                        <span class="rating"><i class="fa-solid fa-star"></i> 5.0</span>
-                    </div>
-                </div>
+                    <a href="@Url.Action("Detail", "Information")" class="box-section">
+                        <img src="~/Content/assets/img-travel/Switzerland.png">
+                        <div class="taskbar">
+                            <div class="taskbar-item"><i class="fa-solid fa-calendar-days"></i>12, September 2025</div>
+                            <div class="taskbar-item"><i class="fa-solid fa-people-group"></i>120+ People</div>
+                        </div>
+                        <h2>Switzerland</h2>
+                        <p>Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias Et.</p>
+                        <div class="feedback">
+                            <span class="price">1,100$</span>
+                            <span class="rating"><i class="fa-solid fa-star"></i> 5.0</span>
+                        </div>
+                    </a>
                 <div class="box-section">
                     <img src="~/Content/assets/img-travel/Berlin.png">
                     <div class="taskbar">
